WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187376
Address two possible causes of missing tiles in iOS Safari, and add logging to gather more data about other possible causes
https://bugs.webkit.org/show_bug.cgi?id=187376
Summary
Address two possible causes of missing tiles in iOS Safari, and add logging t...
Simon Fraser (smfr)
Reported
2018-07-05 18:43:35 PDT
Address two possible causes of missing tiles in iOS Safari, and add logging to gather more data about other possible causes
Attachments
Patch
(8.07 KB, patch)
2018-07-05 18:46 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(7.99 KB, patch)
2018-07-05 20:04 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-sierra-wk2
(2.76 MB, application/zip)
2018-07-05 21:22 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-07-05 18:46:59 PDT
Created
attachment 344392
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-07-05 20:04:10 PDT
Created
attachment 344398
[details]
Patch
EWS Watchlist
Comment 3
2018-07-05 21:22:30 PDT
Comment on
attachment 344398
[details]
Patch
Attachment 344398
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/8452466
New failing tests: imported/w3c/web-platform-tests/service-workers/service-worker/fetch-canvas-tainting-cache.https.html
EWS Watchlist
Comment 4
2018-07-05 21:22:32 PDT
Created
attachment 344400
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 5
2018-07-05 21:56:47 PDT
Comment on
attachment 344398
[details]
Patch Clearing flags on attachment: 344398 Committed
r233561
: <
https://trac.webkit.org/changeset/233561
>
WebKit Commit Bot
Comment 6
2018-07-05 21:56:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-07-05 21:57:19 PDT
<
rdar://problem/41878797
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug